--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,19 @@
 			</plugin>
 		</plugins>
 	</build>
+	 <repositories>
+    <repository>
+      <id>comphenix-rep</id>
+      <name>Comphenix Repository</name>
+      <url>http://repo.comphenix.net/content/groups/public</url>
+    </repository>
+  </repositories>
+  <dependencies>
+    <dependency>
+      <groupId>com.comphenix.protocol</groupId>
+      <artifactId>ProtocolLib</artifactId>
+      <version>3.4.0</version>
+    </dependency>
+  </dependencies>
 	<url>http://blackspectrum.eu/</url>
 </project>
