--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ${project.name}
 main: ${project.groupId}.bspsolutions.BSPSolutions
 version: ${project.version}
 author: Mats391
-depend: [Factions]
+depend: [Factions, MassiveCore, ProtocolLib]
 permissions:
   BSP.purgatory:
     default: op
